iptables
$ sudo iptables -S
-P INPUT ACCEPT
-P FORWARD ACCEPT
-P OUTPUT ACCEPT
-N DOCKER
-N KUBE-SERVICES
-N felix-FORWARD
-N felix-FROM-ENDPOINT
-N felix-FROM-EP-PFX-4
-N felix-FROM-EP-PFX-6
-N felix-FROM-EP-PFX-a
-N felix-FROM-EP-PFX-c
-N felix-INPUT
-N felix-TO-ENDPOINT
-N felix-TO-EP-PFX-4
-N felix-TO-EP-PFX-6
-N felix-TO-EP-PFX-a
-N felix-TO-EP-PFX-c
-N felix-from-4e63ca8eeff
-N felix-from-4e812160eff
-N felix-from-4ea4e17ceff
-N felix-from-676281bcecf
-N felix-from-67f02dfaecf
-N felix-from-8ce611c4ecf
-N felix-from-a3ff7dfaf0d
-N felix-from-af22952ef18
-N felix-from-c5fdc576f0b
-N felix-from-c91214f6ecf
-N felix-from-c92e2998ecf
-N felix-from-ce2a6c2cf0b
-N felix-from-ce453610f0b
-N felix-from-ce6e0f54f0b
-N felix-from-ce8ca39cf0b
-N felix-from-ceb05954f0b
-N felix-from-ced2c8a4f0b
-N felix-from-cf09b882f0b
-N felix-from-cf23396af0b
-N felix-from-cf4c25bef0b
-N felix-p-_dc7c084a57e838b-i
-N felix-p-_dc7c084a57e838b-o
-N felix-to-4e63ca8eeff
-N felix-to-4e812160eff
-N felix-to-4ea4e17ceff
-N felix-to-676281bcecf
-N felix-to-67f02dfaecf
-N felix-to-8ce611c4ecf
-N felix-to-a3ff7dfaf0d
-N felix-to-af22952ef18
-N felix-to-c5fdc576f0b
-N felix-to-c91214f6ecf
-N felix-to-c92e2998ecf
-N felix-to-ce2a6c2cf0b
-N felix-to-ce453610f0b
-N felix-to-ce6e0f54f0b
-N felix-to-ce8ca39cf0b
-N felix-to-ceb05954f0b
-N felix-to-ced2c8a4f0b
-N felix-to-cf09b882f0b
-N felix-to-cf23396af0b
-N felix-to-cf4c25bef0b
-A INPUT -j felix-INPUT
-A FORWARD -j felix-FORWARD
-A FORWARD -j felix-FORWARD
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A felix-FORWARD -i cali+ -m conntrack --ctstate INVALID -j DROP
-A felix-FORWARD -o cali+ -m conntrack --ctstate INVALID -j DROP
-A felix-FORWARD -i cali+ -m conntrack --ctstate RELATED,ESTABLISHED -j RETURN
-A felix-FORWARD -o cali+ -m conntrack --ctstate RELATED,ESTABLISHED -j RETURN
-A felix-FORWARD -i cali+ -j felix-FROM-ENDPOINT
-A felix-FORWARD -o cali+ -j felix-TO-ENDPOINT
-A felix-FORWARD -i cali+ -j ACCEPT
-A felix-FORWARD -o cali+ -j ACCEPT
-A felix-FROM-ENDPOINT -i calia+ -g felix-FROM-EP-PFX-a
-A felix-FROM-ENDPOINT -i cali8ce611c4ecf -g felix-from-8ce611c4ecf
-A felix-FROM-ENDPOINT -i calic+ -g felix-FROM-EP-PFX-c
-A felix-FROM-ENDPOINT -i cali4+ -g felix-FROM-EP-PFX-4
-A felix-FROM-ENDPOINT -i cali6+ -g felix-FROM-EP-PFX-6
-A felix-FROM-ENDPOINT -m comment --comment "From unknown endpoint" -j DROP
-A felix-FROM-EP-PFX-4 -i cali4e63ca8eeff -g felix-from-4e63ca8eeff
-A felix-FROM-EP-PFX-4 -i cali4e812160eff -g felix-from-4e812160eff
-A felix-FROM-EP-PFX-4 -i cali4ea4e17ceff -g felix-from-4ea4e17ceff
-A felix-FROM-EP-PFX-4 -m comment --comment "From unknown endpoint" -j DROP
-A felix-FROM-EP-PFX-6 -i cali67f02dfaecf -g felix-from-67f02dfaecf
-A felix-FROM-EP-PFX-6 -i cali676281bcecf -g felix-from-676281bcecf
-A felix-FROM-EP-PFX-6 -m comment --comment "From unknown endpoint" -j DROP
-A felix-FROM-EP-PFX-a -i caliaf22952ef18 -g felix-from-af22952ef18
-A felix-FROM-EP-PFX-a -i calia3ff7dfaf0d -g felix-from-a3ff7dfaf0d
-A felix-FROM-EP-PFX-a -m comment --comment "From unknown endpoint" -j DROP
-A felix-FROM-EP-PFX-c -i caliceb05954f0b -g felix-from-ceb05954f0b
-A felix-FROM-EP-PFX-c -i calice453610f0b -g felix-from-ce453610f0b
-A felix-FROM-EP-PFX-c -i calic91214f6ecf -g felix-from-c91214f6ecf
-A felix-FROM-EP-PFX-c -i calicf09b882f0b -g felix-from-cf09b882f0b
-A felix-FROM-EP-PFX-c -i calice2a6c2cf0b -g felix-from-ce2a6c2cf0b
-A felix-FROM-EP-PFX-c -i caliced2c8a4f0b -g felix-from-ced2c8a4f0b
-A felix-FROM-EP-PFX-c -i calice6e0f54f0b -g felix-from-ce6e0f54f0b
-A felix-FROM-EP-PFX-c -i calic92e2998ecf -g felix-from-c92e2998ecf
-A felix-FROM-EP-PFX-c -i calicf4c25bef0b -g felix-from-cf4c25bef0b
-A felix-FROM-EP-PFX-c -i calicf23396af0b -g felix-from-cf23396af0b
-A felix-FROM-EP-PFX-c -i calice8ca39cf0b -g felix-from-ce8ca39cf0b
-A felix-FROM-EP-PFX-c -i calic5fdc576f0b -g felix-from-c5fdc576f0b
-A felix-FROM-EP-PFX-c -m comment --comment "From unknown endpoint" -j DROP
-A felix-INPUT ! -i cali+ -j RETURN
-A felix-INPUT -m conntrack --ctstate INVALID -j DROP
-A felix-INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A felix-INPUT -p udp -m udp --sport 68 --dport 67 -j ACCEPT
-A felix-INPUT -p udp -m udp --dport 53 -j ACCEPT
-A felix-INPUT -j felix-FROM-ENDPOINT
-A felix-TO-ENDPOINT -o calia+ -g felix-TO-EP-PFX-a
-A felix-TO-ENDPOINT -o cali8ce611c4ecf -g felix-to-8ce611c4ecf
-A felix-TO-ENDPOINT -o calic+ -g felix-TO-EP-PFX-c
-A felix-TO-ENDPOINT -o cali4+ -g felix-TO-EP-PFX-4
-A felix-TO-ENDPOINT -o cali6+ -g felix-TO-EP-PFX-6
-A felix-TO-ENDPOINT -m comment --comment "To unknown endpoint" -j DROP
-A felix-TO-EP-PFX-4 -o cali4e63ca8eeff -g felix-to-4e63ca8eeff
-A felix-TO-EP-PFX-4 -o cali4e812160eff -g felix-to-4e812160eff
-A felix-TO-EP-PFX-4 -o cali4ea4e17ceff -g felix-to-4ea4e17ceff
-A felix-TO-EP-PFX-4 -m comment --comment "To unknown endpoint" -j DROP
-A felix-TO-EP-PFX-6 -o cali67f02dfaecf -g felix-to-67f02dfaecf
-A felix-TO-EP-PFX-6 -o cali676281bcecf -g felix-to-676281bcecf
-A felix-TO-EP-PFX-6 -m comment --comment "To unknown endpoint" -j DROP
-A felix-TO-EP-PFX-a -o caliaf22952ef18 -g felix-to-af22952ef18
-A felix-TO-EP-PFX-a -o calia3ff7dfaf0d -g felix-to-a3ff7dfaf0d
-A felix-TO-EP-PFX-a -m comment --comment "To unknown endpoint" -j DROP
-A felix-TO-EP-PFX-c -o caliceb05954f0b -g felix-to-ceb05954f0b
-A felix-TO-EP-PFX-c -o calice453610f0b -g felix-to-ce453610f0b
-A felix-TO-EP-PFX-c -o calic91214f6ecf -g felix-to-c91214f6ecf
-A felix-TO-EP-PFX-c -o calicf09b882f0b -g felix-to-cf09b882f0b
-A felix-TO-EP-PFX-c -o calice2a6c2cf0b -g felix-to-ce2a6c2cf0b
-A felix-TO-EP-PFX-c -o caliced2c8a4f0b -g felix-to-ced2c8a4f0b
-A felix-TO-EP-PFX-c -o calice6e0f54f0b -g felix-to-ce6e0f54f0b
-A felix-TO-EP-PFX-c -o calic92e2998ecf -g felix-to-c92e2998ecf
-A felix-TO-EP-PFX-c -o calicf4c25bef0b -g felix-to-cf4c25bef0b
-A felix-TO-EP-PFX-c -o calicf23396af0b -g felix-to-cf23396af0b
-A felix-TO-EP-PFX-c -o calice8ca39cf0b -g felix-to-ce8ca39cf0b
-A felix-TO-EP-PFX-c -o calic5fdc576f0b -g felix-to-c5fdc576f0b
-A felix-TO-EP-PFX-c -m comment --comment "To unknown endpoint" -j DROP
-A felix-from-4e63ca8eeff -j MARK --set-xmark 0x0/0x1000000
-A felix-from-4e63ca8eeff -m mac ! --mac-source 06:A4:32:C8:52:CF -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-4e63ca8eeff -j felix-p-_dc7c084a57e838b-o
-A felix-from-4e63ca8eeff -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-4e63ca8eeff -m comment --comment "Packet did not match any profile (endpoint 4e63ca8eeff511e58793a0369f79ec88)" -j DROP
-A felix-from-4e812160eff -j MARK --set-xmark 0x0/0x1000000
-A felix-from-4e812160eff -m mac ! --mac-source 26:CE:2B:8D:53:EE -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-4e812160eff -j felix-p-_dc7c084a57e838b-o
-A felix-from-4e812160eff -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-4e812160eff -m comment --comment "Packet did not match any profile (endpoint 4e812160eff511e5bf43a0369f79ec88)" -j DROP
-A felix-from-4ea4e17ceff -j MARK --set-xmark 0x0/0x1000000
-A felix-from-4ea4e17ceff -m mac ! --mac-source E2:C9:AF:3C:DB:1B -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-4ea4e17ceff -j felix-p-_dc7c084a57e838b-o
-A felix-from-4ea4e17ceff -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-4ea4e17ceff -m comment --comment "Packet did not match any profile (endpoint 4ea4e17ceff511e5bcfaa0369f79ec88)" -j DROP
-A felix-from-676281bcecf -j MARK --set-xmark 0x0/0x1000000
-A felix-from-676281bcecf -m mac ! --mac-source 96:87:5A:A2:CF:E1 -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-676281bcecf -j felix-p-_dc7c084a57e838b-o
-A felix-from-676281bcecf -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-676281bcecf -m comment --comment "Packet did not match any profile (endpoint 676281bcecfb11e59df852540035ad69)" -j DROP
-A felix-from-67f02dfaecf -j MARK --set-xmark 0x0/0x1000000
-A felix-from-67f02dfaecf -m mac ! --mac-source 6A:6B:2E:1A:B1:85 -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-67f02dfaecf -j felix-p-_dc7c084a57e838b-o
-A felix-from-67f02dfaecf -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-67f02dfaecf -m comment --comment "Packet did not match any profile (endpoint 67f02dfaecfb11e59b9a52540035ad69)" -j DROP
-A felix-from-8ce611c4ecf -j MARK --set-xmark 0x0/0x1000000
-A felix-from-8ce611c4ecf -m mac ! --mac-source 6A:AC:20:BF:6E:57 -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-8ce611c4ecf -j felix-p-_dc7c084a57e838b-o
-A felix-from-8ce611c4ecf -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-8ce611c4ecf -m comment --comment "Packet did not match any profile (endpoint 8ce611c4ecfb11e5844452540035ad69)" -j DROP
-A felix-from-a3ff7dfaf0d -j MARK --set-xmark 0x0/0x1000000
-A felix-from-a3ff7dfaf0d -m mac ! --mac-source DA:DB:6A:CF:E5:22 -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-a3ff7dfaf0d -j felix-p-_dc7c084a57e838b-o
-A felix-from-a3ff7dfaf0d -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-a3ff7dfaf0d -m comment --comment "Packet did not match any profile (endpoint a3ff7dfaf0de11e58134a0369f79ec88)" -j DROP
-A felix-from-af22952ef18 -j MARK --set-xmark 0x0/0x1000000
-A felix-from-af22952ef18 -m mac ! --mac-source CE:24:7B:1F:0E:B0 -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-af22952ef18 -j felix-p-_dc7c084a57e838b-o
-A felix-from-af22952ef18 -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-af22952ef18 -m comment --comment "Packet did not match any profile (endpoint af22952ef18c11e58b4ba0369f79ec88)" -j DROP
-A felix-from-c5fdc576f0b -j MARK --set-xmark 0x0/0x1000000
-A felix-from-c5fdc576f0b -m mac ! --mac-source DA:4C:FB:FA:3A:CC -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-c5fdc576f0b -j felix-p-_dc7c084a57e838b-o
-A felix-from-c5fdc576f0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-c5fdc576f0b -m comment --comment "Packet did not match any profile (endpoint c5fdc576f0be11e5b976a0369f79ec88)" -j DROP
-A felix-from-c91214f6ecf -j MARK --set-xmark 0x0/0x1000000
-A felix-from-c91214f6ecf -m mac ! --mac-source 42:B4:F2:3B:71:80 -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-c91214f6ecf -j felix-p-_dc7c084a57e838b-o
-A felix-from-c91214f6ecf -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-c91214f6ecf -m comment --comment "Packet did not match any profile (endpoint c91214f6ecf411e5a02152540035ad69)" -j DROP
-A felix-from-c92e2998ecf -j MARK --set-xmark 0x0/0x1000000
-A felix-from-c92e2998ecf -m mac ! --mac-source EA:FF:31:D7:A4:23 -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-c92e2998ecf -j felix-p-_dc7c084a57e838b-o
-A felix-from-c92e2998ecf -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-c92e2998ecf -m comment --comment "Packet did not match any profile (endpoint c92e2998ecf411e5a38d52540035ad69)" -j DROP
-A felix-from-ce2a6c2cf0b -j MARK --set-xmark 0x0/0x1000000
-A felix-from-ce2a6c2cf0b -m mac ! --mac-source 1E:C0:FA:7D:B7:CA -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-ce2a6c2cf0b -j felix-p-_dc7c084a57e838b-o
-A felix-from-ce2a6c2cf0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-ce2a6c2cf0b -m comment --comment "Packet did not match any profile (endpoint ce2a6c2cf0be11e58ca5a0369f79ec88)" -j DROP
-A felix-from-ce453610f0b -j MARK --set-xmark 0x0/0x1000000
-A felix-from-ce453610f0b -m mac ! --mac-source B6:31:D6:45:52:5E -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-ce453610f0b -j felix-p-_dc7c084a57e838b-o
-A felix-from-ce453610f0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-ce453610f0b -m comment --comment "Packet did not match any profile (endpoint ce453610f0be11e5865ca0369f79ec88)" -j DROP
-A felix-from-ce6e0f54f0b -j MARK --set-xmark 0x0/0x1000000
-A felix-from-ce6e0f54f0b -m mac ! --mac-source 52:3F:DF:DE:7E:D3 -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-ce6e0f54f0b -j felix-p-_dc7c084a57e838b-o
-A felix-from-ce6e0f54f0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-ce6e0f54f0b -m comment --comment "Packet did not match any profile (endpoint ce6e0f54f0be11e5bbc3a0369f79ec88)" -j DROP
-A felix-from-ce8ca39cf0b -j MARK --set-xmark 0x0/0x1000000
-A felix-from-ce8ca39cf0b -m mac ! --mac-source EA:EF:56:74:EE:BD -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-ce8ca39cf0b -j felix-p-_dc7c084a57e838b-o
-A felix-from-ce8ca39cf0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-ce8ca39cf0b -m comment --comment "Packet did not match any profile (endpoint ce8ca39cf0be11e58374a0369f79ec88)" -j DROP
-A felix-from-ceb05954f0b -j MARK --set-xmark 0x0/0x1000000
-A felix-from-ceb05954f0b -m mac ! --mac-source B6:B7:6F:E1:6D:12 -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-ceb05954f0b -j felix-p-_dc7c084a57e838b-o
-A felix-from-ceb05954f0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-ceb05954f0b -m comment --comment "Packet did not match any profile (endpoint ceb05954f0be11e5975ea0369f79ec88)" -j DROP
-A felix-from-ced2c8a4f0b -j MARK --set-xmark 0x0/0x1000000
-A felix-from-ced2c8a4f0b -m mac ! --mac-source F6:D5:8E:3E:4E:73 -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-ced2c8a4f0b -j felix-p-_dc7c084a57e838b-o
-A felix-from-ced2c8a4f0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-ced2c8a4f0b -m comment --comment "Packet did not match any profile (endpoint ced2c8a4f0be11e58d58a0369f79ec88)" -j DROP
-A felix-from-cf09b882f0b -j MARK --set-xmark 0x0/0x1000000
-A felix-from-cf09b882f0b -m mac ! --mac-source E2:28:D6:E8:C9:47 -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-cf09b882f0b -j felix-p-_dc7c084a57e838b-o
-A felix-from-cf09b882f0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-cf09b882f0b -m comment --comment "Packet did not match any profile (endpoint cf09b882f0be11e58f80a0369f79ec88)" -j DROP
-A felix-from-cf23396af0b -j MARK --set-xmark 0x0/0x1000000
-A felix-from-cf23396af0b -m mac ! --mac-source 6A:FB:43:73:A0:F8 -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-cf23396af0b -j felix-p-_dc7c084a57e838b-o
-A felix-from-cf23396af0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-cf23396af0b -m comment --comment "Packet did not match any profile (endpoint cf23396af0be11e58964a0369f79ec88)" -j DROP
-A felix-from-cf4c25bef0b -j MARK --set-xmark 0x0/0x1000000
-A felix-from-cf4c25bef0b -m mac ! --mac-source 8E:3D:5C:AC:58:47 -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-cf4c25bef0b -j felix-p-_dc7c084a57e838b-o
-A felix-from-cf4c25bef0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-cf4c25bef0b -m comment --comment "Packet did not match any profile (endpoint cf4c25bef0be11e5a758a0369f79ec88)" -j DROP
-A felix-p-_dc7c084a57e838b-i -j MARK --set-xmark 0x1000000/0x1000000
-A felix-p-_dc7c084a57e838b-i -j RETURN
-A felix-p-_dc7c084a57e838b-i -m comment --comment "No match, fall through to next profile" -j MARK --set-xmark 0x0/0x1000000
-A felix-p-_dc7c084a57e838b-o -j MARK --set-xmark 0x1000000/0x1000000
-A felix-p-_dc7c084a57e838b-o -j RETURN
-A felix-p-_dc7c084a57e838b-o -m comment --comment "No match, fall through to next profile" -j MARK --set-xmark 0x0/0x1000000
-A felix-to-4e63ca8eeff -j MARK --set-xmark 0x0/0x1000000
-A felix-to-4e63ca8eeff -j felix-p-_dc7c084a57e838b-i
-A felix-to-4e63ca8eeff -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-4e63ca8eeff -m comment --comment "Packet did not match any profile (endpoint 4e63ca8eeff511e58793a0369f79ec88)" -j DROP
-A felix-to-4e812160eff -j MARK --set-xmark 0x0/0x1000000
-A felix-to-4e812160eff -j felix-p-_dc7c084a57e838b-i
-A felix-to-4e812160eff -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-4e812160eff -m comment --comment "Packet did not match any profile (endpoint 4e812160eff511e5bf43a0369f79ec88)" -j DROP
-A felix-to-4ea4e17ceff -j MARK --set-xmark 0x0/0x1000000
-A felix-to-4ea4e17ceff -j felix-p-_dc7c084a57e838b-i
-A felix-to-4ea4e17ceff -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-4ea4e17ceff -m comment --comment "Packet did not match any profile (endpoint 4ea4e17ceff511e5bcfaa0369f79ec88)" -j DROP
-A felix-to-676281bcecf -j MARK --set-xmark 0x0/0x1000000
-A felix-to-676281bcecf -j felix-p-_dc7c084a57e838b-i
-A felix-to-676281bcecf -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-676281bcecf -m comment --comment "Packet did not match any profile (endpoint 676281bcecfb11e59df852540035ad69)" -j DROP
-A felix-to-67f02dfaecf -j MARK --set-xmark 0x0/0x1000000
-A felix-to-67f02dfaecf -j felix-p-_dc7c084a57e838b-i
-A felix-to-67f02dfaecf -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-67f02dfaecf -m comment --comment "Packet did not match any profile (endpoint 67f02dfaecfb11e59b9a52540035ad69)" -j DROP
-A felix-to-8ce611c4ecf -j MARK --set-xmark 0x0/0x1000000
-A felix-to-8ce611c4ecf -j felix-p-_dc7c084a57e838b-i
-A felix-to-8ce611c4ecf -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-8ce611c4ecf -m comment --comment "Packet did not match any profile (endpoint 8ce611c4ecfb11e5844452540035ad69)" -j DROP
-A felix-to-a3ff7dfaf0d -j MARK --set-xmark 0x0/0x1000000
-A felix-to-a3ff7dfaf0d -j felix-p-_dc7c084a57e838b-i
-A felix-to-a3ff7dfaf0d -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-a3ff7dfaf0d -m comment --comment "Packet did not match any profile (endpoint a3ff7dfaf0de11e58134a0369f79ec88)" -j DROP
-A felix-to-af22952ef18 -j MARK --set-xmark 0x0/0x1000000
-A felix-to-af22952ef18 -j felix-p-_dc7c084a57e838b-i
-A felix-to-af22952ef18 -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-af22952ef18 -m comment --comment "Packet did not match any profile (endpoint af22952ef18c11e58b4ba0369f79ec88)" -j DROP
-A felix-to-c5fdc576f0b -j MARK --set-xmark 0x0/0x1000000
-A felix-to-c5fdc576f0b -j felix-p-_dc7c084a57e838b-i
-A felix-to-c5fdc576f0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-c5fdc576f0b -m comment --comment "Packet did not match any profile (endpoint c5fdc576f0be11e5b976a0369f79ec88)" -j DROP
-A felix-to-c91214f6ecf -j MARK --set-xmark 0x0/0x1000000
-A felix-to-c91214f6ecf -j felix-p-_dc7c084a57e838b-i
-A felix-to-c91214f6ecf -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-c91214f6ecf -m comment --comment "Packet did not match any profile (endpoint c91214f6ecf411e5a02152540035ad69)" -j DROP
-A felix-to-c92e2998ecf -j MARK --set-xmark 0x0/0x1000000
-A felix-to-c92e2998ecf -j felix-p-_dc7c084a57e838b-i
-A felix-to-c92e2998ecf -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-c92e2998ecf -m comment --comment "Packet did not match any profile (endpoint c92e2998ecf411e5a38d52540035ad69)" -j DROP
-A felix-to-ce2a6c2cf0b -j MARK --set-xmark 0x0/0x1000000
-A felix-to-ce2a6c2cf0b -j felix-p-_dc7c084a57e838b-i
-A felix-to-ce2a6c2cf0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-ce2a6c2cf0b -m comment --comment "Packet did not match any profile (endpoint ce2a6c2cf0be11e58ca5a0369f79ec88)" -j DROP
-A felix-to-ce453610f0b -j MARK --set-xmark 0x0/0x1000000
-A felix-to-ce453610f0b -j felix-p-_dc7c084a57e838b-i
-A felix-to-ce453610f0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-ce453610f0b -m comment --comment "Packet did not match any profile (endpoint ce453610f0be11e5865ca0369f79ec88)" -j DROP
-A felix-to-ce6e0f54f0b -j MARK --set-xmark 0x0/0x1000000
-A felix-to-ce6e0f54f0b -j felix-p-_dc7c084a57e838b-i
-A felix-to-ce6e0f54f0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-ce6e0f54f0b -m comment --comment "Packet did not match any profile (endpoint ce6e0f54f0be11e5bbc3a0369f79ec88)" -j DROP
-A felix-to-ce8ca39cf0b -j MARK --set-xmark 0x0/0x1000000
-A felix-to-ce8ca39cf0b -j felix-p-_dc7c084a57e838b-i
-A felix-to-ce8ca39cf0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-ce8ca39cf0b -m comment --comment "Packet did not match any profile (endpoint ce8ca39cf0be11e58374a0369f79ec88)" -j DROP
-A felix-to-ceb05954f0b -j MARK --set-xmark 0x0/0x1000000
-A felix-to-ceb05954f0b -j felix-p-_dc7c084a57e838b-i
-A felix-to-ceb05954f0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-ceb05954f0b -m comment --comment "Packet did not match any profile (endpoint ceb05954f0be11e5975ea0369f79ec88)" -j DROP
-A felix-to-ced2c8a4f0b -j MARK --set-xmark 0x0/0x1000000
-A felix-to-ced2c8a4f0b -j felix-p-_dc7c084a57e838b-i
-A felix-to-ced2c8a4f0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-ced2c8a4f0b -m comment --comment "Packet did not match any profile (endpoint ced2c8a4f0be11e58d58a0369f79ec88)" -j DROP
-A felix-to-cf09b882f0b -j MARK --set-xmark 0x0/0x1000000
-A felix-to-cf09b882f0b -j felix-p-_dc7c084a57e838b-i
-A felix-to-cf09b882f0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-cf09b882f0b -m comment --comment "Packet did not match any profile (endpoint cf09b882f0be11e58f80a0369f79ec88)" -j DROP
-A felix-to-cf23396af0b -j MARK --set-xmark 0x0/0x1000000
-A felix-to-cf23396af0b -j felix-p-_dc7c084a57e838b-i
-A felix-to-cf23396af0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-cf23396af0b -m comment --comment "Packet did not match any profile (endpoint cf23396af0be11e58964a0369f79ec88)" -j DROP
-A felix-to-cf4c25bef0b -j MARK --set-xmark 0x0/0x1000000
-A felix-to-cf4c25bef0b -j felix-p-_dc7c084a57e838b-i
-A felix-to-cf4c25bef0b -m mark --mark 0x1000000/0x1000000 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-cf4c25bef0b -m comment --comment "Packet did not match any profile (endpoint cf4c25bef0be11e5a758a0369f79ec88)" -j DROP
